# cpu-scheduling-sim

./: fcfs.cpp  main.cpp  scheduler.cpp  simulator.cpp  sjf.cpp
core/: main.cpp
core/algorithms/: fcfs.h
core/include/: process.h  utils.h
cpu-scheduling-sim/: .gitignore  CMakeLists.txt  README.md
cpu-scheduling-sim/core/: main.cpp
cpu-scheduling-sim/core/algorithms/: fcfs.h  priority.h  round_robin.h  sjf.h  srtf.h
cpu-scheduling-sim/core/include/: process.h  utils.h
cpu-scheduling-sim/sample_inputs/: basic.json
web/: README.md  package-lock.json  package.json
web/src/: App.css  App.js  index.css
